# clone-protocol

./: Anchor.toml
programs/clone/: Cargo.toml
programs/clone-staking/: Cargo.toml
programs/clone-staking/src/instructions/: initialize.rs
programs/clone/src/: lib.rs  states.rs
programs/clone/src/instructions/: swap.rs  update_prices.rs
programs/depository-token/: Cargo.toml
programs/depository-token/src/: lib.rs
sdk/jupiter-interface/: Cargo.toml
sdk/jupiter-interface/src/: lib.rs
sdk/jupiter-interface/tests/: integration-test.rs
tests/: clone.ts
