[package]
name = "jupiter-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clone = { path = "../../programs/clone", version = "0.1.0" }
anyhow = "1.0.81"
anchor-lang = "0.29.0"
solana-program = "~1.18"
solana-sdk = "~1.18"
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", rev = "05068ce" }
rust_decimal = "1.25.0"
thiserror = "1.0.58"
spl-associated-token-account = "2.0.0"
spl-token = "4.0.0"
switchboard-solana = "0.29.110"
pyth-solana-receiver-sdk = "0.3.1"


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4.0"
rand = "0.8.5"
solana-program-test = "~1.18"
solana-client = "~1.18"
